tests/golden/defaults/airlock-microgateway/airlock-microgateway/00_prerequisites/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-airlock-microgateway
    openshift.io/cluster-monitoring: 'true'
  name: syn-airlock-microgateway
